--- a/mark/第2章-理念.md
+++ b/mark/第2章-理念.md
@@ -27,13 +27,11 @@
   + [P.12 适当使用辅助工具](#p12-适当使用辅助工具)
   + [P.13 适当使用支持库](#p13-适当使用支持库)
 
-理念性规则强调一般性，因此，无法进行检查。不过，理念性规则为下面的具体规则提供了理论依据。一共有 13 条理念性规则。
-
-> 如果觉得没听懂不用在意，的确有点抽象，可以简单理解为一般情况下的编码规范。
+理念性规则强调一般性，因此无法进行检查。不过，理念性规则为下面的具体规则提供了理论依据。一共有 13 条理念性规则。可以简单理解为一般情况下的编码规范。
 
 ## <span id="P1">P.1 在代码中直接表达思想</span>
 
-编译器是不会去读注释（或设计文档）的，许多程序员也（固执地）不去读它们。 而代码中所表达的东西是带有 **明确的语义** 的，并且（原则上）是可以由编译器和其他工具进行检验的。
+编译器是不会去读注释（或设计文档）的，许多程序员也不去读它们。 而代码中所表达的东西是带有 **明确的语义** 的，并且是可以由编译器和其他工具进行检验的。
 
 ```cpp
 class Date {
@@ -45,8 +43,6 @@ public:
 ```
 
 第一个 `month` 比第二个，有更多的信息，以 `const` 修饰，代表不会修改当前的日期，返回类型 `Month` 也非常明确。
-
-> 根据我的一般经验，起码有一半的 `C++` 开发者不懂成员函数修饰 `const` 是为什么，能做什么。只是默认，不修改当前类的数据成员就要加 `const`，明确语义，增加可读性。 **但，不够正确，也远不止如此**。
 
 ```cpp
 #include <iostream>
@@ -71,9 +67,9 @@ int main(){
 
 以上代码会得到一个编译错误，这应该是很常见的调用方式。
 
-为什么呢？显然，就是因为 `month` 成员函数没有以 `const` 修饰。
+因为 `month` 成员函数没有以 `const` 修饰。
 
-**`C++` 不允许 const 的对象调用没有以 const 修饰的成员函数**，事实上这个语义非常的合理：我都是 const 对象了，你为啥要修改？
+**`C++` 不允许 const 的对象调用没有以 const 修饰的成员函数**，这个语义非常的合理：我都是 const 对象了，你为啥要修改？
 
 但是明明 `month` 函数根本没有修改对象的数据，所以这其实是开发者的问题，不应该写出这种代码。
 
@@ -100,8 +96,6 @@ constexpr const_reference operator[]( size_type pos ) const;
 
 const 修饰本身就代表存在不变的暗示。
 
-以上规则应当是所有库作者、接口设计者、接口使用者，都清楚的**基本常识**。
-
 另外，应当注意特殊情况，比如使用了 mutable 关键字修饰的成员，经典的莫过于：
 
 ```cpp
@@ -125,7 +119,7 @@ struct widget{
 
 <br>
 
-相对于 标准库（STL）的算法，使用 for 或 while 等方式的手工循环通常也有上面一样的可读性问题。比如下面这样：
+相对于 标准库（STL）的算法，使用 for 或 while 等方式的手动循环通常也有上面一样的可读性问题。比如下面这样：
 
 ```cpp
 int index = -1;                          //不好
