--- a/mark/第3章-接口.md
+++ b/mark/第3章-接口.md
@@ -20,7 +20,7 @@
 
 ## I.2 避免非 const 的全局变量
 
-当然，你应该避免非 const 的全局变量。但是为什么呢？为什么全局变量（尤其是当它不是常量时）会很糟糕？**全局变量会在函数中注入隐藏的依赖，而该依赖并不是接口的一部分**。下面的代码片段说明了我的观点：
+应该避免非 const 的全局变量。但是为什么呢？为什么全局变量（尤其是当它不是常量时）会很糟糕。**全局变量会在函数中注入隐藏的依赖，而该依赖并不是接口的一部分**。下面的代码片段说明了我的观点：
 
 > 加粗的话注意理解。
 
@@ -33,9 +33,9 @@ int multiply(int fac){
 }
 ```
 
-函数 multiply 的执行有一个副作用——会改变全局变量 glob 的值。因此，**你无法对函数进行孤立测试或推理**。当更多的线程并发地使用 multiply 时，你就必须对变量 glob 加以保护。非 const 的全局变量还有更多其他弊端。**如果函数 multiply 没有副作用，那你可以为了性能而将之前的结果存储到缓存中以进行复用。**
+函数 multiply 的执行有一个副作用——会改变全局变量 glob 的值。因此，**你无法对函数进行孤立测试或推理**。当更多的线程并发地使用 multiply 时，你就必须对变量 glob 加以保护。**如果函数 multiply 没有副作用，那你可以为了性能而将之前的结果存储到缓存中以进行复用。**
 
-> 注意到我们加粗的内容了吗？这非常重要，自行理解。
+> 注意加粗的内容，这非常重要，自行理解。
 > 我们就讲一下最后一句，这其实是在描述**编译器优化** ，我们举个例子：什么情况才可能会是我们说的：**没有副作用，那你可以为了性能而将之前的结果存储到缓存中以进行复用**。
 
 ```cpp
@@ -48,7 +48,7 @@ int main(){
 }
 ```
 
-其实无非就是：编译器看到你用同样的入参调用了两次 就可以干掉第二次调用。之前的结果被缓存了。（前提是这得是[纯函数](https://en.m.wikipedia.org/wiki/Pure_function)）。
+编译器看到你用同样的入参调用了两次 就可以干掉第二次调用。之前的结果被缓存了。（前提是这得是[纯函数](https://en.m.wikipedia.org/wiki/Pure_function)）。
 
 但是我们前面依赖了全局变量，就不行，它有外部的副作用，返回的结果可能会根据全局变量的不同而不同，没办法缓存。不能保证：**多次调用传入的数据相同就能得到完全一致的结果**。
 
@@ -105,7 +105,7 @@ MySingleton* MySingleton::instance = nullptr;
 - 谁来负责单例的销毁？
 - 是否应该允许从单例派生？
 - 如何以线程安全的方式初始化单例？
-- 当单例互相依赖并属于不同的翻译单元时，应该以何种顺序初始化这些单例？这里要吓唬吓唬你了。这一难题被称为[**静态初始化顺序问题**](https://godbolt.org/z/xd3G9sh7P)。
+- 当单例互相依赖并属于不同的翻译单元时，应该以何种顺序初始化这些单例？这一难题被称为[**静态初始化顺序问题**](https://godbolt.org/z/xd3G9sh7P)。
 
 ## 3.2 运用依赖注入化解
 
